--- a/css/resume.css
+++ b/css/resume.css
@@ -145,3 +145,11 @@ a {
 a:hover, a:focus, a:active {
   color: #824027;
 }
+
+@media print
+{
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+}
